--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body onload="initGallery()">
     <header>
-        <div class="logo">MEMEGEN</div>
-        <div class="nav"><i class="fas fa-bars"></i></div>
+        <h1 class="logo">MEMEGEN</h1>
+        <!-- <div class="nav"><i class="fas fa-bars"></i></div> -->
     </header>
 
     <main>
@@ -24,17 +24,18 @@
             <h2 class="my-name">Amit.4tus</h2>
             <div class="my-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo laboriosam commodi impedit aut deserunt vitae quos molestias ea distinctio veniam ex, animi omnis enim error. Harum aperiam quis repellat laudantium.</div>
             <div class="social-media">
-                <div class="facebook"><i class="fab fa-facebook-square"></i></div>
-                <div class="instagram"><i class="fab fa-instagram"></i></div>
+                <div class="facebook" style="display: inline;"><i class="fab fa-facebook-square"></i></div>
+                <div class="instagram" style="display: inline;"><i class="fab fa-instagram"></i></div>
             </div>
         </div>
     </main>
 
     <footer class="">
-        <div class="logo">MEMEGEN</div>
+        <h1 class="logo">MEMEGEN</h1>
     </footer>
 
     <script src="https://kit.fontawesome.com/1dc0ba22a9.js" crossorigin="anonymous"></script>
+    <script src="js/hammer.js"></script>
     <script src="js/gallery-service.js"></script>
     <script src="js/main.js"></script>
 </body>
