--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head class="dom">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -12,13 +12,13 @@
 <body onload="initGallery()">
     <header>
         <h1 class="logo">MEMEGEN</h1>
-        <!-- <div class="nav"><i class="fas fa-bars"></i></div> -->
     </header>
 
     <main>
         <h2>Chose an image to start with</h2>
-        <!-- <div class="search"></div> -->
-        <div class="gallery"></div>
+        <div class="gallery">
+            <!-- Gallery is rendered here -->
+        </div>
         <div class="about-me">
             <img src="img/portrait.jpeg" class="portrait">
             <h2 class="my-name">Amit.4tus</h2>
