--- a/editor.html
+++ b/editor.html
@@ -21,14 +21,13 @@
         onmouseup="endPressOnCanvas()"></canvas>
 
         <div class="tools">
-                <button class="add-txt-btn tool" onclick="onAddTxt()">+</button>
+                <button class="add-txt-btn tool" onclick="onAddTxt()">Add Text</button>
                 <button class="up-btn tool" onclick="goToLastTxt()"><i class="fas fa-arrow-up"></i></button>
                 <button class="down-btn tool" onclick="goToNextTxt()"><i class="fas fa-arrow-down"></i></button>
                 <button class="delete-txt-btn tool" onclick="onDeleteTxt()"><i class="far fa-trash-alt"></i></button>
-                <button class="tool" onchange="onChngeSize(this.value)"><i class="fas fa-plus"></i></button>
-                <button class="tool" onchange="onChngeSize(this.value)"><i class="fas fa-minus"></i></button>
-                <input type="text" class="txt-input tool">
-                <button class="tool" onclick="changeTxt()">Change Text</button>
+                <button class="tool" onclick="onEnlargeSize()"><i class="fas fa-plus"></i></button>
+                <button class="tool" onclick="onLessenSize()"><i class="fas fa-minus"></i></button>
+                <input type="text" class="txt-input tool" oninput="changeTxt()">
                 <button class="done-btn tool" onclick="done()" style="margin-top: 10px;">Done</button>
         </div>
     </main>
