changed text input method

--- a/editor.html
+++ b/editor.html
@@ -27,7 +27,7 @@
                 <button class="delete-txt-btn tool" onclick="onDeleteTxt()"><i class="far fa-trash-alt"></i></button>
                 <button class="tool" onclick="onEnlargeSize()"><i class="fas fa-plus"></i></button>
                 <button class="tool" onclick="onLessenSize()"><i class="fas fa-minus"></i></button>
-                <input type="text" class="txt-input tool" oninput="changeTxt()">
+                <input type="text" class="txt-input tool" onkeyup="changeTxt()">
                 <button class="done-btn tool" onclick="done()" style="margin-top: 10px;">Done</button>
         </div>
     </main>
