--- a/editor.html
+++ b/editor.html
@@ -27,7 +27,7 @@
                 <button class="delete-txt-btn tool" onclick="onDeleteTxt()"><i class="far fa-trash-alt"></i></button>
                 <button class="tool" onclick="onEnlargeSize()"><i class="fas fa-plus"></i></button>
                 <button class="tool" onclick="onLessenSize()"><i class="fas fa-minus"></i></button>
-                <input type="text" class="txt-input tool" onkeyup="changeTxt()">
+                <input type="text" class="txt-input tool" onkeyup="changeTxt()" placeholder="Enter Text">
                 <button class="done-btn tool" onclick="done()" style="margin-top: 10px;">Done</button>
         </div>
     </main>
@@ -35,9 +35,7 @@
     <div class="about-me">
         <img src="img/portrait.jpeg" class="portrait">
         <h2 class="my-name">Amit.4tus</h2>
-        <div class="my-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo laboriosam commodi
-            impedit aut deserunt vitae quos molestias ea distinctio veniam ex, animi omnis enim error. Harum aperiam
-            quis repellat laudantium.</div>
+        <div class="my-description">I am a professional musician getting into website programming. "Almost" is never an option for me, so you can expect only the highest quality products from me.</div>
         <div class="social-media">
             <div class="facebook" style="display: inline;"><i class="fab fa-facebook-square"></i></div>
             <div class="instagram" style="display: inline;"><i class="fab fa-instagram"></i></div>
