--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body onload="initGallery()">
+    <div class="background-image"></div>
     <header>
         <h1 class="logo">MEMEGEN</h1>
     </header>
@@ -22,7 +23,7 @@
         <div class="about-me">
             <img src="img/portrait.jpeg" class="portrait">
             <h2 class="my-name">Amit.4tus</h2>
-            <div class="my-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo laboriosam commodi impedit aut deserunt vitae quos molestias ea distinctio veniam ex, animi omnis enim error. Harum aperiam quis repellat laudantium.</div>
+            <div class="my-description">I am a professional musician getting into website programming. "Almost" is never an option for me, so you can expect only the highest quality products from me.</div>
             <div class="social-media">
                 <div class="facebook" style="display: inline;"><i class="fab fa-facebook-square"></i></div>
                 <div class="instagram" style="display: inline;"><i class="fab fa-instagram"></i></div>
